@@ -10,10 +10,10 @@ Overview of changes in MemProf 0.5.0
 	- ms (Hasbullah Bin Pit)
 	- pt (Duarte Loreto)
 	- sk (Stanislav Visnovsky)
-	- vi (Pablo Saratxaga)
+	- vi (pclouds)
 	- de (Christian Meyer)
-	- az (Pablo Saratxaga)
-	- ca (Pablo Saratxaga)
+	- az (Vasif Ismailoglu MD)
+	- ca (SoftcatalA)
 	- da (Ole Laursen)
 	- pl (Zbigniew Chyla)
 	- fr (Christophe Merlet, Laurent Richard)
